# QINGZHOU_CAR

./: README.md
ai_bringup/include/ai_bringup/: ai.h
ai_bringup/launch/: ai_bringup.launch
ai_bringup/src/: .ai_bringup.cpp.swo  ai.cpp  ai_linux_serial.cpp
ai_ws/devel/: .catkin  setup.sh
ai_ws/devel/lib/ai_bringup/: ai_bringup
ai_ws/devel/lib/my_slam_gmapping/: my_slam_gmapping
ai_ws/devel/lib/pkgconfig/: ai_bringup.pc  car_description.pc  mbot_description.pc  mbot_teleop.pc  my_slam_gmapping.pc  robot_description.pc  ydlidar_ros.pc
ai_ws/devel/lib/ydlidar_ros/: ydlidar_node
ai_ws/devel/share/ai_bringup/cmake/: ai_bringupConfig.cmake
ai_ws/devel/share/car_description/cmake/: car_descriptionConfig.cmake
ai_ws/devel/share/mbot_description/cmake/: mbot_descriptionConfig.cmake
ai_ws/devel/share/mbot_teleop/cmake/: mbot_teleopConfig.cmake
ai_ws/devel/share/my_slam_gmapping/cmake/: my_slam_gmappingConfig.cmake
ai_ws/src/ai_bringup/: CMakeLists.txt  package.xml
ai_ws/src/ai_bringup/include/ai_bringup/: ai_linux_serial.h
ai_ws/src/ai_bringup/launch/: ai_bringup.launch
ai_ws/src/ai_bringup/src/: .ai_bringup.cpp.swp  .ai_linux_serial.cpp.swo  .ai_linux_serial.cpp.swp  .goutputstream-D73H10  ai_bringup.cpp
ai_ws/src/car_description/: package.xml
ai_ws/src/car_description/config/: joint_names_car_description.yaml
ai_ws/src/car_description/launch/: display.launch  gazebo.launch
ai_ws/src/car_description/urdf/: car_description.csv  car_description.urdf
驱动板HEX程序/: Minibalance.hex  readme.txt
(+2 files in other folders)
